--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,23 @@
     </java>
   </target>
 
+ <target name="checkstyle">
+
+<path id="checkstyle.lib.path">
+            <fileset dir="lib" includes="*.jar"/>
+  </path>
+  <taskdef resource="com/puppycrawl/tools/checkstyle/ant/checkstyle-ant-task.properties" classpathref="checkstyle.lib.path"/>
+
+    <checkstyle config="checkstyle.xml"
+      failureProperty="checkstyle.failure"
+              failOnViolation="false">
+              <formatter type="xml" tofile="checkstyle_report.xml"/>
+      <fileset dir="src" includes="**/*.java"/>
+
+ 
+    </checkstyle>
+  </target>
+  
   <target name="clean" description="Delete all gen files.">
     <delete dir="${build.dir}"/>
     <delete file="${jar}"/>
